--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,20 +1,49 @@
+:root {
+    --background: #000000;
+    --background-highlight: #121212;
+    --background-press: #2a2c2f;
+    --background-elevated: #171717;
+    --text-base: #ffff;
+    --text-subdued: #a7a7a7;
+
+    --gap: 2rem;
+}
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+body{
+    background-color: var(--background);
+    color: var(--text-base);
+}
+
+.playlists-container {
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+    margin: 2rem;
+    gap: var(--gap);
+    flex-flow: row wrap;
+    background-color: var(--background-highlight);
+}
+
 .playlist-box{
+    flex-basis: calc(50% - var(--gap));
     position: relative;
     text-align: center;
     font-size: 2rem;
-    background-color: black;
-    margin: 1rem;
+}
+
+.playlist-box:nth-last-child(1) {
+
 }
 
 .playlist-box img{
     max-width: 100%;
-    aspect-ratio: 1;
     opacity: 70%;
 }
 
@@ -24,5 +53,4 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
 }
