--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,50 +7,62 @@
     --text-subdued: #a7a7a7;
 
     --gap: 2rem;
+    --radius: .8rem;
 }
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-body{
-    background-color: var(--background);
+body {
     color: var(--text-base);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: var(--background);
 }
 
-.playlists-container {
-    background-color: aqua;
-    display: flex;
-    justify-content: center;
-    padding: 2rem;
-    margin: 2rem;
-    gap: var(--gap);
-    flex-flow: row wrap;
+
+.playlist-container {
+    margin: 1rem;
+    padding: 1rem 0 0;
+    border-radius: var(--radius);
     background-color: var(--background-highlight);
+   
 }
 
-.playlist-box{
-    flex-basis: calc(50% - var(--gap));
-    position: relative;
-    text-align: center;
-    font-size: 2rem;
+.playlist-container div {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
 }
 
-.playlist-box:nth-last-child(1) {
-
+.playlist-container h3 {
+    margin-left: 2rem;
+    font-size: 1.5rem;
+    font-weight: 800;
 }
 
-.playlist-box img{
-    max-width: 100%;
-    opacity: 70%;
+.playlist-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1rem;
+    border-radius: var(--radius);
+    background-color: var(--background-press);
 }
 
 .playlist-box div {
-    pointer-events: none;
-    position: absolute;   
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 1rem;
+    gap: 1rem;
+    display: flex;
+    align-items: center;
+
+    font-weight: 600;
+}
+
+.playlist-box img {
+    max-width: 25%;
+    min-width: 4rem;
+    aspect-ratio: 1;
 }
