--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,8 @@
     --text-base: #ffff;
     --text-subdued: #a7a7a7;
 
+    --accent: #1ed760;
+
     --gap: 2rem;
     --radius: .8rem;
 }
@@ -13,6 +15,8 @@
 * {
     padding: 0;
     margin: 0;
+    border: 0;
+
     box-sizing: border-box;
 }
 
@@ -22,13 +26,18 @@ body {
     background-color: var(--background);
 }
 
+.user-container {
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: var(--radius);
+    background-color: var(--background-highlight);
+}
 
 .playlist-container {
     margin: 1rem;
     padding: 1rem 0 0;
     border-radius: var(--radius);
     background-color: var(--background-highlight);
-   
 }
 
 .playlist-container div {
@@ -57,7 +66,6 @@ body {
     gap: 1rem;
     display: flex;
     align-items: center;
-
     font-weight: 600;
 }
 
@@ -65,4 +73,17 @@ body {
     max-width: 25%;
     min-width: 4rem;
     aspect-ratio: 1;
+}
+
+.sort-btn {
+    border-radius: 50%;
+    aspect-ratio: 1;
+    height: 30%;
+    margin-right: 1rem;
+    background-color: var(--accent);
+}
+
+.sort-btn svg {
+    width: 100%;
+    padding: .4rem;
 }
