--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,22 +76,22 @@ body {
 }
 
 .sort-btn {
-    border-radius: 50%;
+    width: 25%;
     aspect-ratio: 1;
-    height: 30%;
+    border-radius: 50%;
     margin-right: 1rem;
     background-color: var(--accent);
 }
 
 .sort-btn svg {
     width: 100%;
-    padding: .4rem;
+    aspect-ratio: 1;
 }
 
 .playlist-view {
     margin: 1rem;
     border-radius: var(--radius);
-    background: linear-gradient(to bottom, var(--accent), var(--background-elevated) 25%);
+    background: linear-gradient(to bottom, var(--accent), var(--background-elevated) 50vh);
 }
 
 .playlist-info {
@@ -125,3 +125,62 @@ body {
 .track-list-container ul li {
     margin-block: 1rem;
 }
+
+.playlist-buttons-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 2rem 1rem;
+}
+
+.playlist-buttons-container button {
+    background-color: var(--background-press);
+    color: var(--text-base);
+    padding: .5rem;
+    border-radius: var(--radius);
+}
+
+.playlist-buttons-container a {
+    text-decoration: none;
+    color: var(--text-base);
+}
+
+.filter-dropdown {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height .4s ease-in-out;
+    background-color: hsla(0, 0%, 7%, 0.3);
+}
+
+.filter-dropdown.open{
+    max-height: 100vh;
+}
+
+.filter-form {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+}
+
+.filter-form div {
+    display: flex;
+    align-items: center;
+}
+
+.filter-form select{
+    margin: 1rem;
+}
+
+.filter-form input {
+    margin: 1rem;
+}
+
+.filter-form input{
+    width: 50%;
+    margin-inline: 1rem;
+}
+
+.filter-form button {
+    margin: 2rem 30%;
+}
+
