--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,7 +76,8 @@ body {
 }
 
 .sort-btn {
-    width: 25%;
+    width: 1.5rem;
+    height: 1.5rem;
     aspect-ratio: 1;
     border-radius: 50%;
     margin-right: 1rem;
@@ -84,8 +85,8 @@ body {
 }
 
 .sort-btn svg {
-    width: 100%;
     aspect-ratio: 1;
+    width: 100%;
 }
 
 .playlist-view {
