--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,7 @@
     padding: 0;
     margin: 0;
     border: 0;
-
+    outline: 0;
     box-sizing: border-box;
 }
 
@@ -124,8 +124,25 @@ body {
 }
 
 .track-list-container ul li {
+    display: flex;
     margin-block: 1rem;
+    width: 100%;
+    align-items: center;
 }
+
+.track-list-container ul li img {
+    height: 4rem;
+    width: 4rem;
+    aspect-ratio: 1;
+}
+
+.track-list-container ul li div {
+    margin: 1rem;
+}
+
+.track-list-container ul li div p:nth-child(2) {
+    color: var(--text-subdued);
+} 
 
 .playlist-buttons-container {
     display: flex;
@@ -157,31 +174,113 @@ body {
     max-height: 100vh;
 }
 
+
 .filter-form {
     display: flex;
     flex-direction: column;
+    max-width: 1000px;
     margin: 1rem;
 }
 
-.filter-form div {
+
+.filter-form label {
+    margin-top: 1rem;
+}
+
+.filter-form > div {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    font-weight: 600;
+}
+
+.input-wrapper {
     display: flex;
+    flex-direction: column;
+}
+
+.input-wrapper > * {
+    flex-grow: 1;
+    padding: .4rem;
+    margin: .5rem;
+}
+
+
+
+/*Toggle style and animation*/
+.toggle {
+    width: 2rem;
+    height: 1rem;
+    border-radius: .5rem;
+    display: inline-block;
+    cursor: pointer;
+}
+
+label.toggle {
+    display: flex;
+    width: 100%;
+    gap: 2rem;
     align-items: center;
 }
 
-.filter-form select{
-    margin: 1rem;
+
+input[type="checkbox"] {
+    display: none;
 }
 
-.filter-form input {
-    margin: 1rem;
+input[type="checkbox"]:checked ~ .toggle-fill {
+    background-color: var(--accent);
 }
 
-.filter-form input{
-    width: 50%;
-    margin-inline: 1rem;
+input[type="checkbox"]:checked ~ .toggle-fill::after {
+    transform: translateX(1rem);
 }
+
+.toggle-fill {
+    position: relative;
+    width: 2rem;
+    height: 1rem;
+    border-radius: .5rem;
+    background-color: var(--text-subdued);
+    transition: background-color .2s;
+}
+
+.toggle-fill::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 1rem;
+    width: 1rem;
+    background-color: var(--text-base);
+    border-radius: 50%;
+    transition: transform .2s;
+}
+
 
 .filter-form button {
-    margin: 2rem 30%;
+    margin-top: 2rem;
+    background-color: var(--background-press);
+    color: var(--text-base);
+    font-size: 1rem;
+    padding: .5rem;
+    border-radius: var(--radius);
+    align-self: center;
+}
+
+@media screen and (min-width: 600px) {
+    .filter-form > div {
+        grid-template-columns: 1fr 5fr;
+    }
+
+    .input-wrapper {
+        flex-direction: row;
+    }
+    .toggle-wrapper {
+        margin-top: 1rem;
+    }
+    .filter-form label {
+        margin-top: 0;
+    }
 }
 
