--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,11 +26,76 @@ body {
     background-color: var(--background);
 }
 
+/*Sign in*/
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    min-height: 100dvh;
+    background-color: var(--background-highlight);
+    background: linear-gradient(to bottom, var(--background-elevated), var(--background) 60vh);
+}
+
+.hero {
+    margin: 8rem 2rem 0 2rem;
+}
+
+.hero h1 {
+    font-size: 2rem;
+    color: var(--accent);
+    -webkit-text-stroke: var(--background) .5px;
+}
+
+.hero h2 {
+    font-size: 1.25rem;
+}
+
+
+.sign-in-button {
+    text-shadow: var(--background) 2px 2px;
+    color: var(--accent);
+    -webkit-text-stroke: var(--background) .5px;
+    font-weight: 600;
+    font-size: 1rem;
+    margin-top: 4rem;
+    background-color: var(--background-press);
+    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+    border: 2px solid;  
+    cursor: pointer;
+    padding: 1rem;
+    transition: all 235ms ease-in-out;
+    border-bottom-left-radius: .5rem 2rem;
+    border-bottom-right-radius: 2rem 1rem;
+    border-top-left-radius: 2rem 1rem;
+    border-top-right-radius: 1rem 2rem;
+}
+
+.sign-in-button:hover {
+  transform: translate3d(0, 2px, 0);
+}
+
+
+
+/*Home*/
 .user-container {
     margin: 1rem;
     padding: 1rem;
     border-radius: var(--radius);
     background-color: var(--background-highlight);
+}
+
+.user-container p {
+    margin-bottom: 2rem;
+}
+
+.user-container a {
+    text-decoration: none;
+    color: var(--text-subdued);
+}
+
+.user-container a:hover, .user-container a:focus {
+    color: #ff0000;
 }
 
 .playlist-container {
@@ -89,6 +154,8 @@ body {
     width: 100%;
 }
 
+
+/*Selected playlist*/
 .playlist-view {
     margin: 1rem;
     border-radius: var(--radius);
@@ -175,6 +242,7 @@ body {
 }
 
 
+/*Filter form*/
 .filter-form {
     display: flex;
     flex-direction: column;
@@ -205,7 +273,15 @@ body {
     margin: .5rem;
 }
 
-
+.filter-form button {
+    margin-top: 2rem;
+    background-color: var(--background-press);
+    color: var(--text-base);
+    font-size: 1rem;
+    padding: .5rem;
+    border-radius: var(--radius);
+    align-self: center;
+}
 
 /*Toggle style and animation*/
 .toggle {
@@ -257,16 +333,6 @@ input[type="checkbox"]:checked ~ .toggle-fill::after {
     transition: transform .2s;
 }
 
-
-.filter-form button {
-    margin-top: 2rem;
-    background-color: var(--background-press);
-    color: var(--text-base);
-    font-size: 1rem;
-    padding: .5rem;
-    border-radius: var(--radius);
-    align-self: center;
-}
 
 @media screen and (min-width: 600px) {
     .filter-form > div {
