--- a/client/src/index.css
+++ b/client/src/index.css
@@ -247,7 +247,12 @@ main {
     display: flex;
     flex-direction: column;
     max-width: 1000px;
-    margin: 1rem;
+    padding: 1rem;
+    border-bottom: 5px solid var(--accent);
+}
+
+.filter-form p {
+    margin-block: 1rem;
 }
 
 
